[package]
name = "pisv"
version = "0.1.3"
edition = "2021"

[dependencies]
futures = "0.3.21"
const_format = "0.2.25"
clap = { version = "3.2.5", features = ["derive"] }
dirs = "4.0.0"
rpassword = "6.0.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
chrono = "0.4.19"
md5 = "0.7.0"
rand = "0.8.5"
base64 = "0.13.0"
sha2 = "0.10.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }