[package]
name = "pisv"
version = "0.1.5"
edition = "2021"

[dependencies]
futures = "0.3.21"
tokio = { version = "1.20.1", features = ["full"] }
const_format = "0.2.26"
clap = { version = "3.2.16", features = ["derive"] }
dirs = "4.0.0"
rpassword = "7.0.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
chrono = "0.4.19"
md5 = "0.7.0"
rand = "0.8.5"
base64 = "0.13.0"
sha2 = "0.10.2"